--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.6.1"
   },
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "dotenv": "^16.0.2",
+    "nodemon": "^2.0.20"
   }
 }
